welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:37: error: value Blue is not a member of object java.awt.Color
    faireDiagAv(Color.Blue)
                      ^