welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  def marqueSol() {
    baisseBrosse()
    gauche(); droite()
    leveBrosse()
  }
  
  def faireDiagAv(c:Color) {
    setCouleurBrosse(c)
    marqueSol()
    avance()
    gauche()
    avance()
    marqueSol()
    recule()
    droite()
    recule()
  }
  
  def faireDiagAr(c:Color) {
    setCouleurBrosse(c)
    marqueSol()
    recule()
    gauche()
    avance()
    marqueSol()
    recule()
    droite()
    avance()
  }
  
  def faireMotif() {
    avance()
    faireDiagAr(Color.RED)
    recule()
    avance(2)
    faireDiagAv(Color.Blue)
    recule(2)
    gauche()
    avance(2)
    droite()
    faireDiagAv(Color.YELLOW)
    avance(3)
    faireDiagAr(Color.GREEN)
    
  }
  
  faireMotif()
}